Corrected overlapping of buttons with code :zap:

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -599,7 +599,7 @@ div.reference-subgroup {
   position: relative;
   left: 1em;
   padding-top: 0;
-  margin-top: 0;
+  margin-top: 1rem;
   border: none;
   width: 30.5em;
   max-width: 100%;
@@ -651,6 +651,7 @@ div.reference-subgroup {
   top: 0.5em;
   left: 120px;
   width: 30.5em;
+  padding-top: 1.5rem;
   display: none;
 }
 
